src/test/ui/issue-11004.stderr
error[E0609]: no field `x` on type `*mut A`
  --> $DIR/issue-11004.rs:17:21
   |
17 |     let x : i32 = n.x; //~ no field `x` on type `*mut A`
   |                     ^
   |
   = note: `n` is a native pointer; perhaps you need to deref with `(*n).x`

error[E0609]: no field `y` on type `*mut A`
  --> $DIR/issue-11004.rs:18:21
   |
18 |     let y : f64 = n.y; //~ no field `y` on type `*mut A`
   |                     ^
   |
   = note: `n` is a native pointer; perhaps you need to deref with `(*n).y`

error: aborting due to 2 previous errors

